styles.css
/* ... */
@media (max-width: 900px) {
  .landingTextAndImage {
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
        -ms-flex-direction: column-reverse;
            flex-direction: column-reverse;
  }

  .landingText, .portraitDiv, .iconsFlex {
    width: 100%;
  }

  .landingText {
    text-align: center;
    padding-top: 25px;
  }

  .portraitDiv {
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }

  .iconsFlex {
    -ms-flex-pack: distribute;
        justify-content: space-around;
  }

  .landingArrow {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }

  .linkFlex {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 15%;
  }

  .navLink {
    padding-bottom: 25px;
  }

  .logoImage {
    position: relative;
  }

  .landingTextAndImage {
    padding-top: 0;
  }

  .navLink ::before {
    bottom: 20px;
    height: 60%;
  }

  .tech, .techRow {
    width: 33%;
  }
}
@media (max-width: 700px) {
  .footerR {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }

  .footerR p:nth-of-type(1) {
    line-height: 20px;
  }

  .postText h5 {
    font-size: 16px;
  }

  .postText p, .techStackName {
    font-size: 14px;
  }

  h4, h3 {
    font-size: 25px;
    margin: 20px auto;
  }

  .aboutText {
    width: 100%;
    padding-bottom: 10px;
  }
  .aboutText p {
    font-size: 16px;
  }

  .aboutPicture {
    width: 100%;
    padding-bottom: 10px;
  }
  .aboutPicture img {
    height: 70vh;
    -webkit-transform: rotate(90deg);
            transform: rotate(90deg);
    -o-object-fit: cover;
       object-fit: cover;
  }

  .aboutDesc {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }

  .project {
    padding-right: 0;
  }

  .projectRow {
    -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
  }

  .projectDisplay {
    padding-top: 20px;
  }

  .pBarP {
    width: 50%;
  }

  .projectText a p {
    width: 85%;
  }
}
@media (max-width: 500px) {
  .portfolio {
    background-size: auto;
  }

  .linkFlex {
    display: none;
  }

  h3 {
    width: 70%;
  }

  .post {
    background: white;
    width: 100%;
    border-bottom: 1px solid black;
  }

  .posts {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }

  .recentPostsDiv {
    margin-left: 5px;
  }

  .aboutPicture img {
    height: 50vh;
  }

  .navFlex {
    padding-top: 70px;
  }
}
@media (max-width: 400px) {
  .techStackName {
    font-size: 12px;
  }
}
body, html {
  font-size: 125%;
  background-image: url(backgroundPattern.png);
  background-color: 255, 255, 255, 0.8;
  background-blend-mode: lighten;
  scroll-behavior: smooth;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
}

*,
*:before,
*:after {
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.wrapper {
  width: 80%;
  max-width: 1400px;
  margin: 0 auto;
}

main {
  position: relative;
  z-index: 0;
}

header {
  position: relative;
  z-index: 1;
}

